clusters/maia/apps/platform-object-store/extras/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: object-store
  labels:
    pod-security.kubernetes.io/enforce: "restricted"
    pod-security.kubernetes.io/audit:   "restricted"
    pod-security.kubernetes.io/warn:    "restricted"
