clusters/maia/apps/platform-object-store/extras/networkpolicies.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny
  namespace: object-store
spec:
  podSelector: {}
  policyTypes: ["Ingress","Egress"]
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-dns
  namespace: object-store
spec:
  podSelector: {}
  policyTypes: ["Egress"]
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
      ports:
        - protocol: UDP
          port: 53
        - protocol: TCP
          port: 53

---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: minio-ingress-s3
  namespace: object-store
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: minio
  policyTypes: ["Ingress"]
  ingress:
    - from:
        - ipBlock: { cidr: "0.0.0.0/0" }
      ports:
        - protocol: TCP
          port: 9000
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: minio-ingress-console
  namespace: object-store
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: minio
  policyTypes: ["Ingress"]
  ingress:
    - from:
        - ipBlock: { cidr: "0.0.0.0/0" }
      ports:
        - protocol: TCP
          port: 9001
